--- a/publications.html
+++ b/publications.html
@@ -261,9 +261,9 @@
 </li>
 <li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6.</p>
 </li>
-<li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
+<li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/11153009">Full Paper</a>]</p>
 </li>
-<li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
+<li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/11152821">Full Paper</a>]</p>
 </li>
 <li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978499">Full Paper</a>]</p>
 </li>
@@ -389,6 +389,7 @@
 </table>
 </body>
 </html>
+
 
 
 
